Dia-2/spree-ecommerce/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ecommerce
    service: frontend
    tags.datadoghq.com/env: 'prd'
    tags.datadoghq.com/service: 'store-frontend'
    tags.datadoghq.com/version: '1.0'
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce
      service: frontend
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        app: ecommerce
        service: frontend
        tags.datadoghq.com/env: 'prd'
        tags.datadoghq.com/service: 'store-frontend'
        tags.datadoghq.com/version: '1.0'
      annotations:
        ad.datadoghq.com/storefront.logs: '[{"source": "ruby", "service": "store-frontend"}]'
    spec:
      volumes:
        - hostPath:
            path: /var/run/datadog/
          name: apmsocketpath
      containers:
      - args:
        - docker-entrypoint.sh
        command:
        - sh
        image: salomaosan/storefront:v0.2-apm
        imagePullPolicy: Always
        name: storefront
        volumeMounts:
          - name: apmsocketpath
            mountPath: /var/run/datadog
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 700Mi
          limits: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: frontend
    app: ecommerce
  name: frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
    name: http
  selector:
    service: frontend
    app: ecommerce
  type: ClusterIP
